Update gitignore file and removed about.html

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ __pycache__/
 *.py[cod]
 text.html
 assets/images/flowers.jpg
+assets/images/1.jpg assets/images/ana-bnw.jpg assets/images/ana-class.jpg assets/images/beach.jpg assets/images/chair.jpg assets/images/circle.jpg assets/images/class.jpg assets/images/cobra.png assets/images/dress.jpg assets/images/face.jpg assets/images/favicon-leaf.png assets/images/feet.jpg assets/images/flowers.jpg assets/images/friends.png assets/images/girls.png assets/images/group.jpg assets/images/hand.jpg assets/images/logo-leaf.png assets/images/mountain1.jpg assets/images/namaste1.jpg assets/images/namaste.png assets/images/nature.jpg assets/images/outside.jpg assets/images/playing.png assets/images/pose1.jpg assets/images/pose.jpg assets/images/pray.jpg assets/images/reikii.jpg assets/images/reiki.jpg assets/images/river.jpg assets/images/sea.jpg assets/images/session.jpg assets/images/sun.jpg assets/images/women.jpg assets/images/yogi.jpg
